# voxcraft-sim

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  Dockerfile  README.md  Singularity.def  build-all.sh  docker-build.sh  docker-clear.sh  docker-run.sh  instructions.txt  readme_before_reporting_issues.md  robot.vxd
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  submit-question.md
benchmarking/: benchmark.py  robot_template.txt
benchmarking/basic/: base.vxa  robot.vxd
demos/: .gitignore
demos/KinSelfRep/: base.vxa  demo.py
demos/attach/: _debug.py  attach.py
demos/attach/_debug/: base.vxa
demos/attach/data/: base.vxa
demos/attach/tests/: test1.vxa  test2.vxa
demos/basic/: base.vxa
demos/l-system/: base.vxa  l_system.py  mlp.py  run.py
demos/l-system/data/: base.vxa  robot.vxd
demos/raytracing/: a.hist  base.vxa  base_demo.vxa  base_icarus.vxa  base_race.vxa  cilia_utils.py  collect_results.py  demo.py  icarus.py  race.py  shape_utils.py  submit.sh  submitter.py  voxcraft-sim
demos/raytracing/data0/: bot_0.vxd
demos/raytracing/data1/: base.vxa  bot_0.vxd
demos/recordCoM/: debug
demos/recordCoM/data/: base.vxa
demos/recordCoM/data_simple/: base.vxa
demos/replicate/: README.md  replicate.py
demos/replicate/collision_fail/: base.vxa  bot_0003.vxd  bot_0004.vxd
demos/replicate/data/: base.vxa
demos/replicate/good/: base.vxa  med_bot1.vxd  med_bot2.vxd  med_bot3.vxd  med_bot4.vxd  med_bot5.vxd  tiny_bot1.vxd  tiny_bot34.vxd
demos/replicate/real_exp_for_tufts/: base.vxa
demos/replicate/test4/: base.vxa
demos/salamander/: salamander.binvox  salamander.py  salamander_100.binvox
demos/salamander/data/: base.vxa
demos/sam0622/data/: base.vxa  bot_0045.vxd
demos/test/: 1.py  a.history  base.vxa  rebuild.sh  robot.vxd  voxcraft-sim  with.history
demos/test/others_test_cases/bigbuy/: base.vxa  bestfit.history  robot_0000.vxd
demos/test/others_test_cases/salamander/: base.vxa
docs/: conf.py  contents.rst
docs/get-started/: install.rst  overview.rst  run.rst  try.rst
docs/source/: index.rst
docs/vxa-vxd/: overview.rst  tags.rst
docs/zoo/: 1.basic.rst  zoo.rst
python/: setup.py
python/vox/utils/: tensor_to_cdata.py
src/CollisionDetection/include/: BoundingBox.cuh  CollisionSystem.cuh  Collisions.cuh  Morton.cuh  Utils.h
src/CollisionDetection/src/: BoundingBox.cu  CollisionSystem.cu  Collisions.cu  Morton.cu
src/Executables/: voxcraft-sim.cpp  vx3_node_daemon.cu  vx3_node_worker.cu  vx3_test.cu
src/Utils/: VX3.cu  VX3.cuh  VX3_ForceField.h  VX3_MathTree.h  VX3_Quat3D.h  VX3_Vec3D.h  VX3_dictionary.cuh  VX3_linked_list.cuh  VX3_queue.cuh  VX3_vector.cuh  ctool.h
src/VX3/: VX3_AttachManager.cu  VX3_AttachManager.h  VX3_Collision.cu  VX3_Collision.h  VX3_External.cu  VX3_External.h  VX3_GrowthManager.cu  VX3_GrowthManager.h  VX3_Link.cu  VX3_Link.h  VX3_Material.cu  VX3_Material.h  VX3_MaterialLink.cu  VX3_MaterialLink.h  VX3_MaterialVoxel.cu  VX3_MaterialVoxel.h  VX3_OnlineTest.cu  VX3_OnlineTest.h  VX3_Signal.h  VX3_SignalDiffusion.cu  VX3_SignalDiffusion.h  VX3_SimulationManager.cu  VX3_SimulationManager.cuh  VX3_SimulationResult.h  VX3_Voxel.cu  VX3_Voxel.h  VX3_VoxelGroup.cu  VX3_VoxelGroup.h  VX3_VoxelyzeKernel.cu  VX3_VoxelyzeKernel.cuh
src/VXA/: VX_Object.cpp  VX_Object.h  VX_Sim.cpp  VX_Sim.h
src/old/: Array3D.h  GL_Utils.cpp  GL_Utils.h  MarchCube.cpp  MarchCube.h  Mesh.cpp  Mesh.h  Quat3D.h  TI_Collision.cu  TI_Collision.h  TI_Object.cu  TI_Object.h  TI_Utils.h  VX3_MemoryCleaner.cu  VX3_MemoryCleaner.h  VXS_Bond.cpp  VXS_Bond.h  VXS_BondInternal.h  VXS_SimGLView.cpp  VXS_SimGLView.h  VXS_Voxel.cpp  VXS_Voxel.h  VX_Bond.cpp  VX_Bond.h  VX_Collision.cpp  VX_Collision.h  VX_Enums.h  VX_Environment.cpp  VX_Environment.h  VX_External.h  VX_FEA.cpp  VX_FEA.h  VX_FRegion.cpp  VX_FRegion.h  VX_LinearSolver.cpp  VX_LinearSolver.h  VX_Link.cpp  VX_Link.h  VX_Material.cpp  VX_Material.h  (+18 more)
src/old/rapidjson/: document.h
test/testcase/: test_VX3_forcefield.cu  test_VX3_queue.cu  test_VX3_vector.cu
tmp/: debug-crossaxis-attach.txt  debug-stable.txt  debug-unstable.txt
tools/python/: robot.py
vox/utils/: tensor_to_cdata.py
